--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ button{
     background-color: blanchedalmond;
     color: rgb(81, 59, 43);
     font-size: medium;
-    /* border: none; */
 }
 #container{
     width: 560px;
@@ -56,7 +55,7 @@ button{
     flex-wrap: wrap;
 }
 .slidecontainer {
-    width: 560px; /* Width of the outside container */
+    width: 560px;
   }
 .slider {
   -webkit-appearance: none;
